--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5129,7 +5129,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En este caso es notable que los pasajeros cuya cabina no esta en G ni en F, usualmente son re Europa. Esto es significativo porque la moda de esta categoría es Earth, entonces imputar los datos con Europa sería más adecuado en teoría."
+        "En este caso es notable que los pasajeros cuya cabina no esta en G ni en F, usualmente son de Europa. Esto es significativo porque la moda de esta categoría es Earth, entonces imputar los datos con Europa sería más adecuado en teoría."
       ],
       "metadata": {
         "id": "lFh5C2UEbz2N"
@@ -6282,7 +6282,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Para decidir cuál variable dejar, no solamente probaba con una división de train y test, sino que con 25 divisiones de train y test de 90 10 respectivamente, sobre todos mis mejores modelos, así si hubiera algún crecimiento claro en el promedio de todas las exactitudes, significaría que en verdad la variable tiene impacto y no solamente que el conjunto de esa ocasión se entranaba mejor con esa variable."
+        "Para decidir cuál variable dejar, no solamente probaba con una división de train y test, sino que con 25 divisiones de train y test de 90 10 respectivamente, sobre todos mis mejores modelos, así si hubiera algún crecimiento claro en el promedio de todas las exactitudes, significaría que en verdad la variable tiene impacto y no solamente que el conjunto de esa ocasión se entrenaba mejor con esa variable."
       ],
       "metadata": {
         "id": "68RkCNqbqhck"
@@ -6291,7 +6291,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "La versión final de la regresión logística que dejamos, fue la siguiente."
+        "La versión final de la regresión logística que dejamos, fue la siguiente. Con este modelo logramos una accuracy en kaggle de 0.8017."
       ],
       "metadata": {
         "id": "4hTJU3VGrOU2"
@@ -6306,6 +6306,24 @@
       ],
       "metadata": {
         "id": "h-J_Raoeqg7n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pensamos que para ser simplemente un modelo de regresión logística, es una exactitud moderadamente alta, y tal vez el trabajo futuro sería usar modelos más avanzados como redes neuronales profundas para tener muchos parámetros y mejorar el puntaje en kaggle lo más posible. Hacemos un análisis de la evaluación del modelo en otro notebook."
+      ],
+      "metadata": {
+        "id": "5osN3c9rvCZ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9noXvJ-DvBOg"
       },
       "execution_count": null,
       "outputs": []
